--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,10 @@
     ],
     "require": {
         "php": "^8.1",
-        "spatie/laravel-package-tools": "^1.16",
+        "illuminate/console": "^10.0||^11.0",
         "illuminate/contracts": "^10.0||^11.0",
-        "illuminate/console": "^10.0||^11.0"
+        "spatie/laravel-package-tools": "^1.16",
+        "twilio/sdk": "^8.2"
     },
     "require-dev": {
         "larastan/larastan": "^2.9",
